fix: fix shift and arrows problems

--- a/SCSS/keyboard.scss
+++ b/SCSS/keyboard.scss
@@ -1,4 +1,5 @@
 .keyboard{
+    position: relative;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
