--- a/SCSS/styles.css
+++ b/SCSS/styles.css
@@ -391,6 +391,7 @@ a {
 }
 
 .keyboard {
+  position: relative;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
